Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM0TQSzAeMmJrEL4KCmrKQy",
+      "authorship_tag": "ABX9TyN2rkJkBomCip5jBaoTTFTG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2012,7 +2012,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2035,7 +2035,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3487,7 +3487,7 @@
         }
       },
       "source": [
-        "# 参照\n",
+        "# 参照 &\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -3608,7 +3608,7 @@
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "  string food = \"Pizza\";  // A string variable\n",
+        "  string food = \"Pizza\"; \n",
         "  string* ptr = &food;  // A pointer variable that stores the address of food\n",
         "\n",
         "  cout << food << endl;\n",
@@ -3630,15 +3630,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "2mUjtFMSpJp9"
-      }
     },
     {
       "cell_type": "code",
@@ -3675,18 +3666,21 @@
         }
       },
       "source": [
+        "# ポインター宣言 pointer declaration\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "  string food = \"Pizza\";  // Variable declaration\n",
-        "  string* ptr = &food;    // Pointer declaration\n",
+        "  string food = \"Pizza\";\n",
+        "  string* ptr = &food;    // ポインター宣言\n",
         "\n",
         "  // Reference: Output the memory address of food with the pointer\n",
+        "  // ptr にはアドレスが入っている\n",
         "  cout << ptr << endl;\n",
         "\n",
         "  // Dereference: Output the value of food with the pointer\n",
+        "  // 参照先を見るには `*` を付ける\n",
         "  cout << *ptr << endl;\n",
         "}\n"
       ],
@@ -3728,9 +3722,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x7KawXfwYjBp"
+        "id": "x7KawXfwYjBp",
+        "outputId": "79effee6-d400-4f33-a522-d4e1907ed916",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "# ポインター先の変更\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -3739,43 +3738,60 @@
         "  string food = \"Pizza\";\n",
         "  string* ptr = &food;\n",
         "\n",
-        "  // Output the value of food\n",
         "  cout << food << endl;\n",
-        "\n",
-        "  // Output the memory address of food\n",
         "  cout << &food << endl;\n",
-        "\n",
-        "  // Access the memory address of food and output its value\n",
         "  cout << *ptr << endl;\n",
-        "  \n",
-        "  // Change the value of the pointer\n",
         "  *ptr = \"Hamburger\";\n",
-        "  \n",
-        "  // Output the new value of the pointer\n",
         "  cout << *ptr << endl;\n",
-        "  \n",
-        "  // Output the new value of the food variable\n",
         "  cout << food << endl;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZC4cYleOS1SI"
+        "id": "ZC4cYleOS1SI",
+        "outputId": "c2e01a30-fe02-44d0-e738-d30cd124c9c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pizza\n",
+            "0x7ffc381977f0\n",
+            "Pizza\n",
+            "Hamburger\n",
+            "Hamburger\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gOdj0Sc7GmsP"
+        "id": "gOdj0Sc7GmsP",
+        "outputId": "60f7669d-7cc9-4e51-da88-6b6ea30712d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# 実験\n",
@@ -3789,21 +3805,52 @@
         "    auto * ptr = &thisfood;\n",
         "    *ptr = \"Cheese\";\n",
         "    cout << *ptr << endl;\n",
+        "    cout << thisfood << endl;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vml0BoRVG3sP"
+        "id": "vml0BoRVG3sP",
+        "outputId": "6aa61913-9f4f-4ad6-8267-19cbd0fe5fd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cheese\n",
+            "Cheese\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "2mUjtFMSpJp9"
+      }
     },
     {
       "cell_type": "markdown",
@@ -3817,11 +3864,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rjylv-JQTffr"
+        "id": "rjylv-JQTffr",
+        "outputId": "ac965b6e-e274-43c5-9a14-c4442cf94451",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "# 関数の宣言\n",
+        "# テキストはこのように void 関数を例に出し、その中で cout を使うが\n",
+        "# 関数型の観点からは気持ち悪い\n",
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
@@ -3831,20 +3884,61 @@
         "\n",
         "int main() {\n",
         "  myFunction();\n",
-        "  return 0;\n",
         "}\n"
       ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qo1x456fTrAr",
+        "outputId": "64e9fcef-bbda-474f-a950-51b70f018642",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I just got executed!"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "v9uP_tL-uWIq"
+      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "qo1x456fTrAr"
-      },
       "source": [
-        "!g++ temp.cpp; ./a.out"
+        ""
       ],
+      "metadata": {
+        "id": "RAkvW89ruV1p"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -5847,13 +5941,14 @@
         "id": "ElUDAhDLso_Q"
       },
       "source": [
+        "# 参照型とポインター型\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main (){\n",
         "    int x = 100;\n",
-        "    int* p = &x; // pはポインタ型\n",
+        "    int* p = &x; // pはポインター型\n",
         "    int& r = x; // rは参照型\n",
         "\n",
         "    *p = 200;\n",
@@ -5898,8 +5993,8 @@
         "}\n",
         "\n",
         "int main() {\n",
-        "    int (*fp)(int, int) = Add;  // 関数 Add のアドレスを保持する関数ポインタ fp\n",
-        "    int result = fp(3, 5);      // 関数ポインタ fp を介して関数 Add が実行される\n",
+        "    int (*fp)(int, int) = Add;  // 関数 Add のアドレスを保持する関数ポインター fp\n",
+        "    int result = fp(3, 5);      // 関数ポインター fp を介して関数 Add が実行される\n",
         "    std::cout << result << endl;  // 8\n",
         "\n",
         "    return 0;\n",
@@ -5933,8 +6028,8 @@
         "}\n",
         "\n",
         "int main() {\n",
-        "    auto fp = Add;  // 関数 Add のアドレスを保持する関数ポインタ fp\n",
-        "    int result = fp(3, 5);      // 関数ポインタ fp を介して関数 Add が実行される\n",
+        "    auto fp = Add;  // 関数 Add のアドレスを保持する関数ポインター fp\n",
+        "    int result = fp(3, 5);      // 関数ポインター fp を介して関数 Add が実行される\n",
         "    std::cout << result << endl;  // 8\n",
         "\n",
         "    return 0;\n",
@@ -6800,14 +6895,14 @@
         "id": "kMqkQGnQHHIt"
       },
       "source": [
-        "# ベクターの先頭ポインタの取得 x.data()\n",
+        "# ベクターの先頭ポインターの取得 x.data()\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "#include <vector>\n",
         "\n",
         "int main() {\n",
         "    std::vector<int> x = {4, 300, 2, 1, 0};\n",
-        "    auto px = x.data();  // 先頭ポインタ\n",
+        "    auto px = x.data();  // 先頭ポインター\n",
         "    auto num = *px;  // 4\n",
         "\n",
         "    std::cout << px << endl;\n",
@@ -7414,7 +7509,7 @@
       "source": [
         "%%script false\n",
         "\n",
-        "int* p1 = new int(100);  // p1 は new で確保されたメモリ領域を指すポインタ\n",
+        "int* p1 = new int(100);  // p1 は new で確保されたメモリ領域を指すポインター\n",
         "int* p2 = new int[5];    // 配列の場合は [] を付ける\n",
         "\n",
         "delete p1;    // new によって確保されたメモリを delete で解放\n",
@@ -7618,7 +7713,7 @@
         "    std::shared_ptr<int> x = std::make_shared<int>(100); // int* x = new int(100); の代わり\n",
         "                                                         // 所有者は1人。\n",
         "    {\n",
-        "        std::shared_ptr<int> y = x; // 通常のポインタ同様、コピーすることで所有権が共有される\n",
+        "        std::shared_ptr<int> y = x; // 通常のポインター同様、コピーすることで所有権が共有される\n",
         "                                    // 所有者が2人に増える。\n",
         "        std::cout << *y << endl;\n",
         "    } // y が破棄されて所有者が1人になる。\n",
