Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPVpD9pHMs2Oz8DuFKWnTL1",
+      "authorship_tag": "ABX9TyOhDBP0Vhu9wBIYSbUpsxBS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5222,7 +5222,7 @@
         "  }\n",
         "\n",
         "  MyReadFile.close();\n",
-        "}\n"
+        "}"
       ],
       "execution_count": 11,
       "outputs": [
@@ -5327,8 +5327,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 質問 ファイルを一度全部読み込んで処理したい\n",
-        "# 実験\n",
+        "# 実験 ファイルを一度全部読み込む\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -5342,12 +5341,12 @@
       ],
       "metadata": {
         "id": "yI2w17S0WS3A",
-        "outputId": "e9bceffc-76b7-4117-8694-4d65d3f28022",
+        "outputId": "58e1356e-5cdd-40ce-d0cf-92ab6af94493",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -5364,49 +5363,111 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "xbJp8FKkY_vu",
-        "outputId": "97952513-d7fb-4557-abe0-d4fefb276bec",
+        "id": "xbJp8FKkY_vu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 実験 ファイルを一度全部読み込む => vector<string> に入れる\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main () {\n",
+        "    ofstream ofs(\"temp.txt\");\n",
+        "    ofs << \"foo bar baz \\n\";\n",
+        "    ofs << \"This is a pen\" << endl;\n",
+        "    ofs << \"日本語もどうか\" << endl << endl;\n",
+        "    ofs << \"これが最後\" << endl;\n",
+        "    ofs << \"ん\";\n",
+        "    ofs.close();\n",
+        "\n",
+        "    ifstream ifs(\"./temp.txt\");\n",
+        "    vector<string> myLines;\n",
+        "    string myLine;\n",
+        "    while (getline (ifs, myLine)) {\n",
+        "        myLines.push_back(myLine);\n",
+        "    };\n",
+        "\n",
+        "    sort(myLines.begin(), myLines.end());\n",
+        "\n",
+        "    for (string line: myLines){\n",
+        "        if (line != \"\")cout << line << endl;\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "8vOtNvRFE-zj",
+        "outputId": "4df236a6-e0c3-47df-9e94-2b6d22b7362d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "This directory includes a few sample datasets to get you started.\n",
-            "\n",
-            "*   `california_housing_data*.csv` is California housing data from the 1990 US\n",
-            "    Census; more information is available at:\n",
-            "    https://developers.google.com/machine-learning/crash-course/california-housing-data-description\n",
-            "\n",
-            "*   `mnist_*.csv` is a small sample of the\n",
-            "    [MNIST database](https://en.wikipedia.org/wiki/MNIST_database), which is\n",
-            "    described at: http://yann.lecun.com/exdb/mnist/\n",
-            "\n",
-            "*   `anscombe.json` contains a copy of\n",
-            "    [Anscombe's quartet](https://en.wikipedia.org/wiki/Anscombe%27s_quartet); it\n",
-            "    was originally described in\n",
-            "\n",
-            "    Anscombe, F. J. (1973). 'Graphs in Statistical Analysis'. American\n",
-            "    Statistician. 27 (1): 17-21. JSTOR 2682899.\n",
-            "\n",
-            "    and our copy was prepared by the\n",
-            "    [vega_datasets library](https://github.com/altair-viz/vega_datasets/blob/4f67bdaad10f45e3549984e17e1b3088c731503d/vega_datasets/_data/anscombe.json).\n",
-            "\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yWfRjuHONXgE"
-      },
+      "cell_type": "code",
       "source": [
-        "上書きと追記"
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "CL2MFbRXE-p8",
+        "outputId": "537660bd-2181-419a-bed0-a268017cb6fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is a pen\n",
+            "foo bar baz \n",
+            "これが最後\n",
+            "ん\n",
+            "日本語もどうか\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat temp.txt"
+      ],
+      "metadata": {
+        "id": "vrQT3oE6p0xY",
+        "outputId": "4854269c-5ba3-4980-baef-e1826dd5f83a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "foo bar baz \n",
+            "This is a pen\n",
+            "日本語もどうか\n",
+            "\n",
+            "これが最後"
+          ]
+        }
       ]
     },
     {
@@ -5419,6 +5480,7 @@
         "outputId": "4cd4958b-083f-43ac-99e5-4db76722b991"
       },
       "source": [
+        "# 上書きと追記\n",
         "%%writefile file.txt\n",
         "Good friend, for Jesus' sake forbear,\n",
         "To dig the dust enclosed here.\n",
@@ -5516,11 +5578,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "v7nVRIvWnl-k"
+        "id": "v7nVRIvWnl-k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e6e0dbd3-9978-42bf-87e0-4d233a501766"
       },
       "source": [
         "# 例外処理 exceptions\n",
-        "\n",
+        "# 次のプログラムの age を変えて実行してみる\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -5538,114 +5604,54 @@
         "    cout << \"Access denied - You must be at least 18 years old.\\n\";\n",
         "    cout << \"Age is: \" << myNum;  \n",
         "  }\n",
-        "  return 0;\n",
-        "}\n"
+        "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sXH_yclMnwrK"
+        "id": "sXH_yclMnwrK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fd560e08-f149-48ea-c33c-192b1da185a2"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Access granted - you are old enough."
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vasNgg0a8m3i"
+        "id": "OZN2Bu5A9WqA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b2dbe3f2-6f4c-44e0-98e2-3b06eec6f2e1"
       },
       "source": [
+        "# ピリオド3つ three dots\n",
         "%%writefile temp.cpp\n",
-        "\n",
-        "# include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  try {\n",
-        "    int age = 20;\n",
-        "    if (age >= 18) {\n",
-        "      cout << \"Access granted - you are old enough.\";\n",
-        "    } else {\n",
-        "      throw (age);\n",
-        "    }\n",
-        "  }\n",
-        "  catch (int myNum) {\n",
-        "    cout << \"Access denied - You must be at least 18 years old.\\n\";\n",
-        "    cout << \"Age is: \" << myNum;  \n",
-        "  }\n",
-        "  return 0;\n",
-        "}\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "s-wwtOHF8ndo"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WjmnyJNM8_zi"
-      },
-      "source": [
-        "%%writefile temp.cpp\n",
-        "\n",
-        "\n",
-        "# include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  try {\n",
-        "    int age = 15;\n",
-        "    if (age >= 18) {\n",
-        "      cout << \"Access granted - you are old enough.\";\n",
-        "    } else {\n",
-        "      throw 505;\n",
-        "    }\n",
-        "  }\n",
-        "  catch (int myNum) {\n",
-        "    cout << \"Access denied - You must be at least 18 years old.\\n\";\n",
-        "    cout << \"Error number: \" << myNum;  \n",
-        "  }\n",
-        "  return 0;\n",
-        "}\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Tzx3ZsOv8_nF"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "OZN2Bu5A9WqA"
-      },
-      "source": [
-        "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
@@ -5661,32 +5667,56 @@
         "  catch (...) {\n",
         "    cout << \"Access denied - You must be at least 18 years old.\\n\";\n",
         "  }\n",
-        "  return 0;\n",
-        "}\n"
+        "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7q_edc0-9Wb9"
+        "id": "7q_edc0-9Wb9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7774306-5943-4514-fdfa-a413b316f50a"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Access denied - You must be at least 18 years old.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rMANLnVl8n2h"
+        "id": "rMANLnVl8n2h",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e33fbb8e-e9fc-4cb0-affd-50e3ca543788"
       },
       "source": [
+        "#  例外処理による入力チェック\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
+        "using namespace std;\n",
         "\n",
         "int CharToInt(const char c) {\n",
         "    switch (c) {\n",
@@ -5702,11 +5732,11 @@
         "        case '9':  return 9;\n",
         "        default:\n",
         "            // 関数から例外を送出\n",
-        "            throw std::runtime_error(\"数値ではない文字が入っています\");\n",
+        "            throw runtime_error(\"数値ではない文字が入っています\");\n",
         "    }\n",
         "}\n",
         "\n",
-        "int StringToInt(const std::string& str) {\n",
+        "int StringToInt(const string& str) {\n",
         "    int num = 0;\n",
         "    for (const auto s : str) {\n",
         "        num *= 10;\n",
@@ -5718,32 +5748,50 @@
         "}\n",
         "\n",
         "int main() {\n",
-        "    std::string str = \"123XY56\";\n",
+        "    string str = \"123XY56\";\n",
         "    try {\n",
         "        // StringToInt 内部の CharToInt から例外が送出される\n",
         "        auto num = StringToInt(str);\n",
         "\n",
-        "        std::cout << num << endl;\n",
-        "    } catch (const std::runtime_error& e) {\n",
-        "        std::cout << e.what() << endl;\n",
+        "        cout << num << endl;\n",
+        "    } catch (const runtime_error& e) {\n",
+        "        cout << e.what() << endl;\n",
         "    }\n",
-        "\n",
-        "    return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HesdtoSI8nSh"
+        "id": "HesdtoSI8nSh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7a641cfb-47fb-4039-fcc8-514a49811ef6"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "数値ではない文字が入っています\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
